--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,6 @@
 .header {
     background-color: #F2CC85;
+    background-color: #f2f2f2;
 }
 
 .navBar {
@@ -37,9 +38,26 @@
 }
 
 .widget {
-    width: 40px;
+    height: 40px;
     transition: 0.5s;
 }
 .widget:hover{
     scale: 1.1;
+}
+
+.widget-img {
+    width: 40px;
+}
+
+.widget-total {
+    position: relative;
+    top: -55px;
+    right: -20px;
+    background-color: #f2f2f2;
+    margin: 0;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    border-radius: 30px;
+    border: solid 2px black;
 }
