--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 .btn {
-    background-color: rgb(55, 55, 55, 0.75);
-    color: #F2F2F2;
+    background-color: #f2a71b95;
+    color: black;
     font-size: 1rem;
     border: solid 1px black;
     border-radius: 5px;
@@ -11,6 +11,14 @@
 }
 
 .btn:hover {
-    background-color: rgba(55, 55, 55);
+    background-color: #f2a71bd8;
     cursor: pointer;
+}
+
+.btn-smaller {
+    font-size: 0.7rem;
+}
+
+.btn-bigger {
+    font-size: 1.2rem;
 }
