--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,20 +1,34 @@
+.ItemList {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 1200px;
+    margin: auto;
+    gap: 10px;
+}
+
+a:link{
+    text-decoration:none;
+}
+
 .card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* background-color: rgba(242, 242, 242, 0); */
-    background-color: rgb(35, 35, 35, 0.85);
+    background-color: rgba(242, 242, 242, 0);
+    background-color: white;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
     transition: all 0.5s;
-    transition-delay: 0.3s;
-    color: white;
+    transition-delay: 0.1s;
+    color: black;
     border: solid 1px black;
+    cursor: pointer;
+    position: relative;
 }
 .card:hover {
-    box-shadow: 5px 8px rgb(45, 45, 45);
-    /* transform: scale(1.02); */
+    box-shadow: 0px 5px rgb(1, 20, 28);
+    translate: 0px -5px;
 }
 
 
@@ -39,3 +53,55 @@
     margin: 0;
 }
 
+.withoutStock {
+    color: grey;
+}
+
+.withoutStockSpan {
+    position: absolute;
+}
+
+.inOffer{
+    position: absolute;
+    border-top-right-radius: 10px;
+    color: green;
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
+
+.favButton {
+    position: absolute;
+    display: none;
+    color: grey;
+    right: 10px;
+    font-size: 1.3rem;
+}
+
+.card:hover .favButton{
+    display: block;
+}
+
+.favButtonActive {
+    display: block;
+    color: #F2A71B;
+}
+
+.searchError {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    margin: 20vh auto;
+}
+
+.banner {
+    height: 300px;
+    overflow: hidden;
+    color: white;
+    font-size: 2rem;
+}
+
+.banner h1 {
+    text-shadow: #F2A71B 2px 2px;
+}
+.banner h3 {
+    background-color: rgba(0, 0, 0, 0.7);
+}
