--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,8 @@
 .header {
-    background-color: #F2CC85;
-    background-color: #f2f2f2;
+    background-color: #F2A71B;
+    position: sticky;
+    top: 0px;
+    z-index: 10;
 }
 
 .navBar {
@@ -24,11 +26,12 @@
 }
 
 .navBar-list li {
-    padding: 0 20px;
+    padding: 0 25px;
+    height: 25px;
     transition: all 300ms;
     list-style-type: none;
 }
-.navBar-list li:hover {
+.scaleItem:hover {
     transform: scale(1.1);
 }
 
@@ -43,6 +46,7 @@
 }
 .widget:hover{
     scale: 1.1;
+    cursor: pointer;
 }
 
 .widget-img {
@@ -60,4 +64,76 @@
     line-height: 25px;
     border-radius: 30px;
     border: solid 2px black;
+}
+
+.hideTotal {
+    display: none;
+}
+
+.categorias {
+    position: relative;
+    cursor: pointer;
+}
+.submenu{
+    display: none;
+    padding: 10px 0;
+    position: absolute;
+    left: 50px;
+    top: 25px;
+    text-align: left;
+    background-color: #F2A71B;
+    overflow: hidden;
+}
+.submenuFilter{
+    width: 200px;
+}
+.arrowDown{
+    width: 11px;
+}
+.arrowUp{
+    width: 11px;
+    rotate: 180deg;
+}
+
+.showSubMenu {
+    display: block;
+    animation: showCatAnimation 0.2s linear 0s;
+}
+
+.showSubMenu li:hover{
+    transform: translateX(2px);
+}
+
+@keyframes showCatAnimation {
+    0% {height: 0px;}
+    10% {height: calc(0.1*125px);}
+    20% {height: calc(0.2*125px);}
+    30% {height: calc(0.3*125px);}
+    40% {height: calc(0.4*125px);}
+    50% {height: calc(0.5*125px);}
+    60% {height: calc(0.6*125px);}
+    70% {height: calc(0.7*125px);}
+    80% {height: calc(0.8*125px);}
+    90% {height: calc(0.9*125px);}
+    100% {height: auto;}
+}
+
+.list-search {
+    display: flex;
+    height: 100%;
+}
+.list-search img {
+    width: 18px;
+    margin-right: 10px;
+}
+.list-search input{
+    background-color: rgba(255, 255, 255, 0.5);
+    color: black;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    padding: 0 10px;
+}
+.list-search input::placeholder{
+    color: black;
 }
