--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -11,6 +11,7 @@
     background-color: white;
     border-radius: 20px;
     margin: 20px auto 40px;
+    padding: 20px;
     width: 900px;
 }
 
@@ -32,4 +33,38 @@
 }
 .order-detail p{
     margin: 5px 0;
+}
+
+.ordersList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 20px;
+    margin: 20px auto 40px;
+    padding: 20px;
+    width: 500px;
+}
+
+.ordersList h3{
+ margin: 5px 0 15px;
+}
+
+.orderList-item {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.orderList-item p{
+ margin: 10px 0;
+}
+
+.order-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 50%;
+    padding-top: 10px;
 }
