--- a/src/components/Tracing/Tracing.css
+++ b/src/components/Tracing/Tracing.css
@@ -6,8 +6,15 @@
     width: 500px;
 }
 
+.tracing-form h5{
+    margin: 15px 0;
+}
+
 .tracing-form label {
     margin-right: 20px;
+    display: inline-block;
+    text-align: right;
+    width: 230px;
 }
 
 .tracing-form input{
